georgian fonts- local/absolute adr.

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@
   font-size: 18px;
   line-height: 165%;
   letter-spacing: 0%;
-  
+  font-family: 'Arial GEO';
 }
 
 .block{
@@ -141,7 +141,7 @@
 }
 
 .Ge{
-  font-family: Arial Geo;
+  font-family: "ALK Life", sans-serif;
 }
 
 .span2{
